Fix race condition, improve output, and add options to test script